Fix AJAX search and pagination; wrap each product card in link to description, created a partials template

--- a/voltpr/static/css/home.css
+++ b/voltpr/static/css/home.css
@@ -50,15 +50,12 @@ body {
     height: 70vh;
 }
 
-.categ {
-    text-align: center;
-}
 
-.category {
+.content {
     margin-top: 40px;
-    display: flex;
     gap: 70px;
     justify-content: center;
+    min-height: 50vh;
 }
 
 .phones {
